--- a/CreateSample/CreateSample/CreateSample.vcxproj
+++ b/CreateSample/CreateSample/CreateSample.vcxproj
@@ -148,12 +148,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CreateSample.hpp" />
+    <ClInclude Include="Shuffle.hpp" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CreateSample.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Shuffle.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
